@@ -12,6 +12,7 @@
 2006 January 16:
 - bug fix: litesql-gen did not create correct SQL schema for backends with auto incrementing primary key fields (mysql, sqlite3)
 - bug fix: SQLite3 - backend did not reset transaction state when error occurred
+- litesql-gen writes #ifndef #define #endif - checks to generated header now
 
 
 2006 January 14:
